--- a/face.html
+++ b/face.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Censorship</title>
-  <link rel="stylesheet" href="../../base.css">
+  <!-- <link rel="stylesheet" href="../../base.css"> -->
   <style>
     * {
       box-sizing: border-box;
@@ -35,16 +35,7 @@
 </head>
 
 <body>
-  <div class="controls">
-    <label for="SCALE">
-      SCALE:
-      <input value="1.35" type="range" name="SCALE" min="0.3" max="3" step="0.1">
-    </label>
-    <label for="SIZE">
-      SIZE:
-      <input value="10" type="range" name="SIZE" min="1" max="100" step="1">
-    </label>
-  </div>
+ 
   <div class="wrap">
     <video class="webcam"></video>
     <canvas class="video"></canvas>
