Added fas-mode: true option to FaceDetector()

--- a/face.html
+++ b/face.html
@@ -37,7 +37,7 @@
 <body>
  
   <div class="wrap">
-    <img src="./profile-photo.jpg" alt="Neil Coutinho's profile photo" id="profilePhoto"/>
+    <img src="./couple.jpg" alt="A couple's photo" id="profilePhoto"/>
     <video class="webcam"></video>
     <canvas class="video"></canvas>
     <canvas class="face"></canvas>
