Draw Rect on detected face

--- a/face.html
+++ b/face.html
@@ -4,40 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Censorship</title>
-  <!-- <link rel="stylesheet" href="../../base.css"> -->
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-    }
-
-    .wrap {
-      position: relative;
-      min-height: 100vh;
-      display: grid;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .wrap>* {
-      grid-column: 1;
-      grid-row: 1;
-    }
-
-
-    .face {
-      position: absolute;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
  
   <div class="wrap">
-    <img src="./couple.jpg" alt="A couple's photo" id="profilePhoto"/>
+    <!-- <img src="./couple.jpg" alt="A couple's photo" id="profilePhoto"/> -->
     <video class="webcam"></video>
     <canvas class="video"></canvas>
     <canvas class="face"></canvas>
